# thoughtworks-homework-badminton-hall

./: CMakeLists.txt  Readme.md  config.h.in  demo.cpp  main.cpp
func/: CMakeLists.txt  Court.cpp  Court.h  Order.cpp  Order.h  generateSummary.cpp  generateSummary.h
text/: test_case01.txt
